Some fixes in lines visualization.

--- a/scene.html
+++ b/scene.html
@@ -571,11 +571,11 @@
 
 						contour3dPoints.forEach(function(countourPoints, index, array)
 						{
-							if(contour3dPoints.length <= 1)
+							if(countourPoints.length <= 1)
 							{
-								if(countourPoints.length == i)
+								if(countourPoints.length == 1)
 								{
-									scene.add(createSphere(countourPoints[0], color));
+									scene.add(createSphere(countourPoints[0], color, "", 0.2));
 								}
 							}
 							else
@@ -612,9 +612,9 @@
                 scene.add(lightAbove);
             }
 
-            function createSphere(pos, color, name = "")
+            function createSphere(pos, color, name = "", radius = 0.7, )
             {
-            	var sphereGeometry = new THREE.SphereGeometry(0.7, 10, 10);
+            	var sphereGeometry = new THREE.SphereGeometry(radius, 10, 10);
                             
 	            var sphereMaterial = new THREE.MeshBasicMaterial({color: color});
 	            var sphere = new THREE.Mesh(sphereGeometry, sphereMaterial);
@@ -622,7 +622,7 @@
 	            sphere.position.x = pos.x;
 	            sphere.position.y = pos.y;
 	            sphere.position.z = pos.z;
-
+// 
 	            return sphere;
 	        }
             
