--- a/scene.html
+++ b/scene.html
@@ -112,10 +112,7 @@
 				update();
 			});
 			
-			
-
-			//var bezierCurveDivisions = 50;
-            var controlPoints = [];
+			var controlPoints = [];
 
             var meshSize = 4;
             var x = -5;
@@ -166,14 +163,16 @@
 				return intersectionPoint;
 			}
 
-			function bezierCurvePoints(controlPoints, step = 0.1)
+			function bezierCurvePoints(controlPoints, divisions = 51)
 			{
 				var curvePoints = [];
 
 				var currentIterationPoints = controlPoints.slice();
 				var nextIterationPoints = Array();
+
+				var step = 1.0 / divisions;
 	
-				for(var t = 0.0; t < 1.0; t += step)
+				for(var t = 0.0; t <= 1.001; t += step)
 				{
 					while(nextIterationPoints.length != 1)
 					{
@@ -211,7 +210,7 @@
 
                 var bezierCurvesVertices = [];
 
-				for (var i = 0; i < bezierCurveDivisions; i++)
+				for (var i = 0; i < bezierCurveDivisions + 1; i++)
 				{
 					var points = [];
                 	basicBezierModel.forEach(function(pointArr, index, array)
@@ -306,18 +305,15 @@
                     	}
                     	function check(v1, v2, v3)
                     	{
-                    		return
-                    		checkIndex(v1) &&
-                    		checkIndex(v2) &&
-                    		checkIndex(v3);
+                    		return (checkIndex(v1) &&
+                    				checkIndex(v2) &&
+                    				checkIndex(v3));
                     	}
 
                         v1 = i * (bezierCurveDivisions + 1) + j;
                         v2 = (i + 1) * (bezierCurveDivisions + 1) + j; 
                         v3 = i * (bezierCurveDivisions + 1) + (j + 1); 
                         bezierSurfaceFaces.push(new THREE.Face3(v1, v2, v3));
-
-                        if(!check(v1, v2, v3)) continue;
 
                         //e1
                         var f1 = currentFaceIndex - 1;
@@ -344,9 +340,6 @@
                         v2 = (i + 1) * (bezierCurveDivisions + 1) + (j + 1);
                         v3 = i * (bezierCurveDivisions + 1) + (j + 1);
                         bezierSurfaceFaces.push(new THREE.Face3(v1, v2, v3));
-
-                        check(v1, v2, v3);
-                        if(!check(v1, v2, v3)) continue;
 
                         currentFaceIndex++;
 
