--- a/scene.html
+++ b/scene.html
@@ -696,14 +696,22 @@
     				{    
       					for(let i = 0; i < m; i++)
       					{    
-        					triangles.push(new THREE.Face3(st + i, st + i + 1, st + m + i + 1));
+      						var v1 = st + i;
+      						var v2 = st + i + 1;
+      						var v3 = st + m + i + 1;
+      						edgesInfo.push(new EdgeInfo(v1, v2, ));
+
+        					triangles.push(new THREE.Face3(v1, v2, v3));
         					currentFaceIndex++;
 
-        					if(i < m - 1)
+        					if(i > n / 2)
         					{
-        						triangles.push(new THREE.Face3(st + i + 1, st + m + i + 2, st + m + i + 1));
-        					    currentFaceIndex++;
+         					if(i < m - 1)
+        					{
+         						triangles.push(new THREE.Face3(st + i + 1, st + m + i + 2, st + m + i + 1));
+         					    currentFaceIndex++;
 							}
+						}
       					}
      					m--;
       					st += j + 1;  
