Changed test triangle position.

--- a/scene.html
+++ b/scene.html
@@ -128,16 +128,16 @@
             	}
             }
 
-            var triangleControlPoints = [new THREE.Vector3(-16, -8, 0), 
-    									 new THREE.Vector3(8, -12, 0), // p201
-      									 new THREE.Vector3(-8, -12, 0), // p102    
-      									 new THREE.Vector3(16, -8, 0), // p300 GREEN
-      									 new THREE.Vector3(12, -6, -8), // p210
-      									 new THREE.Vector3(8, 6, -8), // p120
-      									 new THREE.Vector3(0, 12, 0), // p030 BLUE
-      									 new THREE.Vector3(-8, 6, -8), // p021
-      									 new THREE.Vector3(-12, -6, -8), // p012
-      									 new THREE.Vector3(0, 0, 8)];
+            var triangleControlPoints = [new THREE.Vector3(-16, 0, -8), 
+    									 new THREE.Vector3(8, 0, -12), 
+      									 new THREE.Vector3(-8, 0, -12), 
+      									 new THREE.Vector3(16, 0, -8), 
+      									 new THREE.Vector3(12, -8, -6), 
+      									 new THREE.Vector3(8, -8, 6), 
+      									 new THREE.Vector3(0, 0, 12), 
+      									 new THREE.Vector3(-8, -8, 6), 
+      									 new THREE.Vector3(-12, -8, -6),
+      									 new THREE.Vector3(0, 8, 0)];
 
             var controlPointsSpheres = [];
 
